--- a/src/styles/ac/layouts/_layouts.site.scss
+++ b/src/styles/ac/layouts/_layouts.site.scss
@@ -5,6 +5,7 @@
 .l-site {
   display: block;
   background: $brand-col-2;
+  overflow: hidden;
 }
 
 /*
